чуть преобразовал findDuplicatesInSameSizeFiles в FileDuplicateFinder2 но по скорости вроде не выиграл и очень жидко с синхронизацией работы с очередью, могут исключения выскакивать (но пока не выскакивают)